--- a/team.html
+++ b/team.html
@@ -235,7 +235,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Aurelia&nbsp;Altherr</h1>
                     <p>
-                        Sporttherapeutin i.A.
+                        BSc in Sport, Bewegung und Gesundheit
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
