--- a/florina-marquez.html
+++ b/florina-marquez.html
@@ -144,7 +144,8 @@
     </div>
     <div class="row">
         <ul>
-            <li>2018 Beginn CAS Expertise in der Pädiatrischen Physiotherapie ZHAW</li>
+            <li>2019 Beginn DAS Expertise in der Pädiatrischen Physiotherapie ZHAW</li>
+            <li>CAS Expertise in der Pädiatrischen Physiotherapie ZHAW 2019</li>
             <li>Reflektierte Praxis-Wissenschaft ZHAW</li>
             <li>Erwachsenenbildnerin SVEB 1</li>
             <li>Fussreflexzonentherapie</li>
