--- a/kimon-plomaritis.html
+++ b/kimon-plomaritis.html
@@ -141,7 +141,7 @@
     <div class="row">
         <ul>
             <li>2019 Motivational Interviewing ZHAW</li>
-            <li>Bachelor of Science in Physiotherapie 2018</li>
+            <li>Bachelor of Science in Physiotherapie BFH 2018</li>
              
         </ul>
     </div>
