--- a/kimon-plomaritis.html
+++ b/kimon-plomaritis.html
@@ -106,12 +106,12 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/kimon.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/vera.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Vera&nbsp;Schmidt</h2>
-            <p>Dipl.&nbsp;Physiotherapeut<br/>
+            <p>Dipl.&nbsp;Physiotherapeutin<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
