--- a/team.html
+++ b/team.html
@@ -187,7 +187,7 @@
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
-                        <a href="kimon-plomaritis.html" role="button">
+                        <a href="Vera-schmidt.html" role="button">
                             Mehr&hellip;
                         </a>                        
                     </p>
