--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
         <div class="col-sm-6">
             <div class="well">
                 <img class="icon col-lg-2 col-md-3 col-sm-3 col-xs-2" src="img/question-solid.svg"/>
-                <h1><a href="docs/FAQ.pdf" target="_blank"<h1>Häufig gestellte Fragen</h1>
+                <h1>Häufig gestellte Fragen</h1>
+                <h1><a href="docs/FAQ.pdf" target="_blank"<h1>FAQ</h1>
                 
                 </a>
             </div>
