--- a/team.html
+++ b/team.html
@@ -183,7 +183,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Vera&nbsp;Schmidt</h1>
                     <p>
-                        Dipl. Physiotherapeutin FH
+                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
