--- a/index.html
+++ b/index.html
@@ -300,8 +300,9 @@
             <div class="well">
                 <img class="icon col-lg-2 col-md-3 col-sm-3 col-xs-2" src="img/question-solid.svg"/>
                 <h1>Häufig gestellte Fragen</h1>
-                <a class="more" href="docs/FAQ.pdf" target="_blank"></a>FAQ</h1>
-                
+                <br/>
+                <a class="more" href="physio.html" role="button">
+                    FAQ&hellip;
                 </a>
             </div>
         </div>
