faslches doc FAq

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <img class="icon col-lg-2 col-md-3 col-sm-3 col-xs-2" src="img/question-solid.svg"/>
                 <h1>Häufig gestellte Fragen</h1>
                 <br/>
-                <a class="more" href="physio.html" role="button">
+                <a class="more" href="docs/FAQ.pdf" role="button">
                     FAQ&hellip;
                 </a>
             </div>
