Keine Brakes bei Team Daniel Aurelia

--- a/team.html
+++ b/team.html
@@ -218,7 +218,7 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Daniel&nbsp;Seiler</h1>
-                    <p>Fitness Betreuer/Trainer safs
+                    <p>Fitness Betreuer/Trainer&nbsp;safs
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
@@ -235,7 +235,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Aurelia&nbsp;Altherr</h1>
                     <p>
-                        BSc in Sport, Bewegung und Gesundheit
+                        BSc in Sport, Bewegung und&nbsp;Gesundheit
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
