--- a/team.html
+++ b/team.html
@@ -235,7 +235,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Aurelia&nbsp;Altherr</h1>
                     <p>
-                        BSc in Sport, Bewegung und&nbsp;Gesundheit
+                        BSc in Sport, Bewegung&nbsp;und&nbsp;Gesundheit
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
