--- a/aurelia-altherr.html
+++ b/aurelia-altherr.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Aurelia&nbsp;Altherr</h2>
-            <p>Sporttherapeutin i.A.<br/>
+            <p>Sporttherapeutin <br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
