--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
         <div class="section col-xs-12">
             <p>
-                Herzlich Willkommen – Ihre Gesundheit steht bei uns im Zentrum.
+                Herzlich willkommen – Ihre Gesundheit steht bei uns im Zentrum.
             </p>
             <p>
                 In unseren Räumlichkeiten in Oberdorf bieten wir ein grosses Spektrum an Physiotherapie und
@@ -290,7 +290,7 @@
             <div class="new well">
                 <h1>Aktuell:</h1>
     
-                <p>Bitte beachten Sie unsere <a href="docs/Öffnungszeiten ab 15.08.2019.pdf" target="_blank"><b>neuen Öffnungszeiten ab dem 15.8.2019</b></a></p>
+                <p>Bitte beachten Sie unsere <ahref="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 </p>
                 <br/>
                 </a>                    
