--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
             <div class="new well">
                 <h1>Aktuell:</h1>
     
-                <p>Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
-                </p>
+                <p>"_hidden">Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
+                </p> Alles Gute im neuen Jahr 2020!
                 <br/>
                 </a>                    
             </div>
