--- a/team.html
+++ b/team.html
@@ -246,7 +246,9 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/aurelia.jpg">
             </div>
-        </div> <div class="col-sm-6 col-xs-12">
+    </div> 
+    <div class="row"></div>
+        <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Gianni&nbsp;Moretti</h1>
