--- a/team.html
+++ b/team.html
@@ -266,6 +266,19 @@
             </div>
         </div>                  
     </div>
+    <div class="col-sm-6 col-xs-12">
+        <div class="portrait-well">
+            <div class="col-md-5 col-xs-12">
+                <h1>Igballe&nbsp;Berisha</h1>
+                <p>
+                    Raumpflegerin
+                    <br/>                                            
+                    <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                </p>
+            </div>
+            <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
+        </div>
+    </div> 
     <div class="row">        
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
@@ -283,29 +296,17 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Igballe&nbsp;Berisha</h1>
+                    <h1>Shevin&nbsp;Al Isa</h1>
                     <p>
                         Raumpflegerin
                         <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/portrait-placeholder.png">
             </div>
         </div> 
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <h1>Wathsala Amarasingha</h1>
-                    <p>
-                        Raumpflegerin
-                        <br/>                                            
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/wathasala.JPG">
-            </div>
-        </div> 
+        
         </div>       
     </div>
 
