--- a/team.html
+++ b/team.html
@@ -265,8 +265,8 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Lebenslauf_Gianni_Moretti Kopie.jpg">
             </div>
         </div>                  
-    </div>
-    <div class="col-sm-6 col-xs-12">
+        </div>
+        <div class="col-sm-6 col-xs-12">
         <div class="portrait-well">
             <div class="col-md-5 col-xs-12">
                 <h1>Igballe&nbsp;Berisha</h1>
@@ -303,7 +303,7 @@
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/portrait-placeholder.png">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
             </div>
         </div> 
         
