--- a/team.html
+++ b/team.html
@@ -266,17 +266,17 @@
             </div>
         </div>                  
         <div class="col-sm-6 col-xs-12">
-        <div class="portrait-well">
-            <div class="col-md-5 col-xs-12">
-                <h1>Igballe&nbsp;Berisha</h1>
-                <p>
-                    Raumpflegerin
-                    <br/>                                            
-                    <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                </p>
+            <div class="portrait-well">
+                    <div class="col-md-5 col-xs-12">
+                        <h1>Igballe&nbsp;Berisha</h1>
+                        <p>
+                        Raumpflegerin
+                        <br/>                                            
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
             </div>
-            <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
-        </div>
     </div> 
     <div class="row">        
         <div class="col-sm-6 col-xs-12">
@@ -295,7 +295,7 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Shevin&nbsp;Al Isa</h1>
+                    <h1>Shevin&nbsp;Al&nbsp Isa</h1>
                     <p>
                         Raumpflegerin
                         <br/>                                            
