--- a/team.html
+++ b/team.html
@@ -290,12 +290,12 @@
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
+             </div>                
             </div>
-        </div>                
-        <div class="col-sm-6 col-xs-12">
+            <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Shevin&nbsp;Al&nbsp Isa</h1>
+                    <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
                     <p>
                         Raumpflegerin
                         <br/>                                            
@@ -304,9 +304,7 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
             </div>
-        </div> 
-        
-        </div>       
+    </div      
     </div>
 
     <!--
