--- a/team.html
+++ b/team.html
@@ -286,7 +286,9 @@
                     <p>
                         Raumpflegerin
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail
+
+                        </a>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
@@ -301,8 +303,8 @@
                         <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
+                    </div>
+                    <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
             </div>
     </div      
     </div>
