--- a/team.html
+++ b/team.html
@@ -252,11 +252,10 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Gianni&nbsp;Moretti</h1>
-                    <p>
-                        Trainer, Sportwissenschaftler i.A.&nbsp;
+                    <p>Trainer, Sportwissenschaftler&nbsp;i.A.&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                        <br/>
+                        <br/<>
                         <a href="gianni-moretti.html" role="button">
                                 Mehr&hellip;
                         </a>                        
@@ -267,9 +266,9 @@
         </div>                  
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
-                    <div class="col-md-5 col-xs-12">
-                        <h1>Igballe&nbsp;Berisha</h1>
-                        <p>
+                <div class="col-md-5 col-xs-12">
+                    <h1>Igballe&nbsp;Berisha</h1>
+                    <p>
                         Raumpflegerin
                         <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
@@ -283,8 +282,7 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Safete&nbsp;Nuredini</h1>
-                    <p>
-                        Raumpflegerin
+                    <p>Raumpflegerin
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail
 
@@ -296,15 +294,15 @@
         </div>
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
-                    <div class="col-md-5 col-xs-12">
-                        <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
-                        <p>
+                <div class="col-md-5 col-xs-12">
+                    <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
+                    <p>
                         Raumpflegerin
                         <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
-                    </div>
-                    <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
             </div>
     </div      
     </div>
