--- a/team.html
+++ b/team.html
@@ -284,9 +284,7 @@
                     <h1>Safete&nbsp;Nuredini</h1>
                     <p>Raumpflegerin
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail
-
-                        </a>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
@@ -305,7 +303,6 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
             </div>
     </div>      
-    </div>
 
     <!--
     <div class="row">                     
