--- a/team.html
+++ b/team.html
@@ -302,6 +302,7 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
             </div>
+        </div>
     </div>      
 
     <!--
