--- a/team.html
+++ b/team.html
@@ -277,7 +277,7 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
             </div>
     </div> 
-    <div class="row">        
+    <div class="row"></div>        
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
