--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </p>Coronavirus
                 <br/>Im Moment darf unser Betrieb normal weiterlaufen.
                 <br/> Es gelten die bekannten Hygiene-Schutzmassnahmen des BAG.
-                <br/> Bei Änderungen informieren wir Sie selbstverständlich umgehend.
+                <br/> Bei Änderungen informieren wir Sie hier und vor Ort umgehend.
                 <p class="hidden"></p>Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 </p>
                 <br/>
