--- a/index.html
+++ b/index.html
@@ -291,10 +291,13 @@
             <div class="new well">
                 <h1>Aktuell:</h1>
                 </p>Coronavirus
-                <br/>Im Moment darf unser Betrieb normal weiterlaufen.
-                <br/> Es gelten die bekannten Hygiene-Schutzmassnahmen des BAG.
-                <br/> Bei Änderungen informieren wir Sie hier und vor Ort umgehend.
-                <p class="hidden"></p>Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
+                <br/>
+                </p>Im Moment darf unser Betrieb normal weiterlaufen.</p>
+                <br/> 
+                </p>Es gelten die bekannten Hygiene-Schutzmassnahmen des BAG.</p>
+                <br/> 
+                </p>Bei Änderungen informieren wir Sie hier und vor Ort umgehend.</p>
+                <pclass="hidden"></p>Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 </p>
                 <br/>
                 </a>                    
