--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <div class="col-sm-6 hidden">
             <div class="new well">
                 <h1>Aktuell:</h1>
-                </p>Coronavirus.
+                </p>Coronavirus
                 <br/>
                 </p>Im Moment darf unser Betrieb normal weiterlaufen.</p>
                 <br/> 
