--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </p>Es gelten die bekannten Hygiene-Schutzmassnahmen des BAG.</p>
                 <br/> 
                 </p>Bei Änderungen informieren wir Sie hier und vor Ort umgehend.</p>
-                <pclass="hidden"></p>Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
+                <pclass="hidden"></p>Bitte beachten Sie unser <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 </p>
                 <br/>
                 </a>                    
