--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-            </p> Beschluss Regierungsrat BLvom 15.3.20<a href="docs/MM_Weitere_Massnahmen_150320.pdf" target="_blank"><b></b></a><br/> 
+            </p>Beschluss Regierungsrat BL <a href="docs/MM_Weitere_Massnahmen_150320.pdf" target="_blank"><b>vom 15.3.20</b></a><br/> 
             
             Liebe Kundinnen<br/> 
             Liebe Kunden<br/> 
