--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
             Liebe Kundinnen<br/> 
             Liebe Kunden<br/> 
 
-            Fitness:<br/> 
+            <b>Fitness:</b><br/> 
             Ab Mo., 16.3.20 6h00 bis 30.4.20 24h00 geschlossen!
 
-            Physiotherapie:<br/> 
+            <b> Physiotherapie:</b><br/> 
             Wir verfolgen stets die neusten Beschlüsse des Schweizerischen Physioverbandes.
             Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben. Falls sich dies ändert, werden wir Sie auf der Homepage informieren.<br/> 
 
