--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
             Liebe Kunden<br/> 
 
             <b>Fitness:</b><br/> 
-            Ab Mo., 16.3.20 6h00 bis 30.4.20 24h00 geschlossen!<br/> 
+            Ab Mo., 16.3.20 bis 30.4.20 geschlossen!<br/> 
 
             <b> Physiotherapie:</b><br/> 
             Wir verfolgen stets die neusten Beschlüsse des Schweizerischen Physioverbandes.
-            Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben. Falls sich dies ändert, werden wir Sie auf der Homepage informieren.<br/> 
+            Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben. Alle nicht absolut zwingend notwendigen Behandlungen von RisikopatientInnen werden aktuell nicht weitergeführt. Falls sich etwas ändert, werden wir Sie auf der Homepage informieren.<br/> 
 
 
             Besten Dank für Ihr Verständnis und bleiben Sie gesund!<br/> 
