--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
                 <h1>Fitness</h1>
                 <p>Kraft- und Ausdauertraining, professionell begleitet.</p><br/>
-                </p>Bewegte Überbrückung der "Movimento-freien"  <a href="https://wetransfer.com/downloads/0a52213f36fc87a131621b472a4edbc620200316174637/24156d9ab7e0941bb69de3d2a2abb03420200316174637/f3a42d" target="_blank"><b>Zeit</b></a><br/> 
+                    Bewegte<a href="docs/Überbrückungsprogramm für Zuhause.pdf" target="_blank"><b>Überbrückung der "Movimento-freien"Zeit</b></a><br/> 
                 <a class="more" href="fitness.html" role="button">
                     Mehr&hellip;
                 </a>
