--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
                 <h1>Fitness</h1>
                 <p>Kraft- und Ausdauertraining, professionell begleitet.</p><br/>
-                    Bewegte<a href="docs/Überbrückungsprogramm für Zuhause.pdf" target="_blank"><b>Überbrückung der "Movimento-freien"Zeit</b></a><br/> 
+                <a href="docs/Überbrückungsprogramm für Zuhause.pdf" target="_blank"><b>Bewegte Überbrückung der "Movimento-freien"Zeit</b></a><br/></p>
                 <a class="more" href="fitness.html" role="button">
                     Mehr&hellip;
                 </a>
