--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
 
             Besten Dank für Ihr Verständnis und bleiben Sie gesund!<br/> 
-            Euer Movimento-Team</p>
+            Ihr Movimento-Team</p>
            
 
                 
