--- a/index.html
+++ b/index.html
@@ -269,18 +269,18 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Aktuell</h1>
-            </p>Beschluss Regierungsrat BL <a href="docs/MM_Weitere_Massnahmen_150320.pdf" target="_blank"><b>vom 15.3.20</b></a><br/> 
+                <h1>Aktueller Stand 18.3.20</h1>
+            </p></a>
             
             Liebe Kundinnen<br/> 
             Liebe Kunden<br/> 
 
             <b>Fitness:</b><br/> 
-            Ab Mo., 16.3.20 bis 30.4.20 geschlossen!<br/> 
+            Ab Mo., 16.3.20 bis auf weiteres geschlossen!<br/> 
 
             <b> Physiotherapie:</b><br/> 
             Wir verfolgen stets die neusten Beschlüsse des Schweizerischen Physioverbandes.
-            Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben. Alle nicht absolut zwingend notwendigen Behandlungen von RisikopatientInnen werden aktuell nicht weitergeführt. Falls sich etwas ändert, werden wir Sie auf der Homepage informieren.<br/> 
+            Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben. <b>Aber:</b>Behandlungen, die <b>nicht</b> dringend sind, sollen aktuell nicht weitergeführt werden. Falls sich etwas ändert, werden wir Sie auf der Homepage informieren.<br/> 
 
 
             Besten Dank für Ihr Verständnis und bleiben Sie gesund!<br/> 
