--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
             <b> Physiotherapie:</b><br/> 
             Wir verfolgen stets die neusten Beschlüsse des Schweizerischen Physioverbandes.
-            Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben. <b>Aber:</b>Behandlungen, die <b>nicht</b> dringend sind, sollen aktuell nicht weitergeführt werden. Falls sich etwas ändert, werden wir Sie auf der Homepage informieren.<br/> 
+            Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben.<br/> <b>Aber:</b> Behandlungen, die <b>nicht</b> dringend sind, sollen aktuell nicht weitergeführt werden.<br/> Falls sich etwas ändert, werden wir Sie auf der Homepage informieren.<br/> 
 
 
             Besten Dank für Ihr Verständnis und bleiben Sie gesund!<br/> 
@@ -307,7 +307,7 @@
             <div class="new well">
                 <h1>Aktuell:</h1>
                 
-                <p class="hidden">Bitte beachten Sie unser <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
+                <p class="hidden">Bitte beachtene Sie unser <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 </p>
                 <br/>
                 </a>                    
