Kraft Training Reto

--- a/index.html
+++ b/index.html
@@ -342,7 +342,11 @@
                 <h1>Fitness</h1>
                 <p>Kraft- und Ausdauertraining, professionell begleitet.<br/>
  
-                <a href="docs/Überbrückungsprogramm für Zuhause.pdf" target="_blank"><b>Bewegte Überbrückung der "Movimento-freien"Zeit</b></a><br/></p>
+                <a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b>Dieregelmässige Aktivität</b></a><br/></p>
+                <a href="docs/2 - Das Aufwärmen.pdf" target="_blank"><b>Aufwärmen</b></a><br/></p>
+                <a href="docs/3 - Das Ausdauertraining.pdf" target="_blank"><b>Ausdauer</b></a><br/></p>
+                <a href="docs/4 - Das Krafttraining.pdf" target="_blank"><b>Kraft</b></a><br/></p>
+                <a href="docs/5 - Das Dehnen.pdf" target="_blank"><b>Dehnen</b></a><br/></p>
                 <a class="more" href="fitness.html" role="button">
                     Mehr&hellip;
                 </a>
