--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
                 <h1>Fitness</h1>
                 <p>Kraft- und Ausdauertraining, professionell begleitet.<br/>
  
-                <a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b>Die regelmässige Aktivität</b></a><br/></p>
-                <a href="docs/2 - Das Aufwärmen.pdf" target="_blank"><b>Aufwärmen</b></a><br/></p>
-                <a href="docs/3 - Das Ausdauertraining.pdf" target="_blank"><b>Ausdauer</b></a><br/></p>
-                <a href="docs/4 - Das Krafttraining.pdf" target="_blank"><b>Kraft</b></a><br/></p>
-                <a href="docs/5 - Das Dehnen.pdf" target="_blank"><b>Dehnen</b></a><br/></p>
-                                <a class="more" href="fitness.html" role="button">
+                    <a class="more" href="docs/1 - Die regelmässige körperliche Aktivität.pdf" role="button">Die regelmässige Aktivität&hellip;<br/>
+                <a class="more" href=="docs/2 - Das Aufwärmen.pdf" role="button">Aufwärmen&hellip;<br/>
+                <a class="more" href=="docs/3 - Das Ausdauertraining.pdf" role="button">Ausdauer&hellip;<br/>
+                <a class="more" href="docs/4 - Das Krafttraining.pdf" role="button">Kraft&hellip;<br/>
+                <a class="more" href="docs/5 - Das Dehnen.pdf" role="button">Dehnen&hellip;<br/>
+                <a class="more" href="fitness.html" role="button">
                     Mehr&hellip;
                 </a>
             </div>
