--- a/index.html
+++ b/index.html
@@ -269,18 +269,20 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Aktueller Stand 18.3.20</h1>
+                <h1>Aktueller Stand 16.04.20</h1>
             </p></a>
             
             Liebe Kundinnen<br/> 
             Liebe Kunden<br/> 
 
             <b>Fitness:</b><br/> 
-            Ab Mo., 16.3.20 bis auf weiteres geschlossen!<br/> 
+            Bleibt bis auf weiteres <b>geschlossen!</b><br/> 
 
             <b> Physiotherapie:</b><br/> 
-            Wir verfolgen stets die neusten Beschlüsse des Schweizerischen Physioverbandes.
-            Momentan soll die Dienstleistung der Physiotherapie weiter aufrecht erhalten bleiben.<br/> <b>Aber:</b> Behandlungen, die <b>nicht</b> dringend sind, sollen aktuell nicht weitergeführt werden.<br/> Falls sich etwas ändert, werden wir Sie auf der Homepage informieren.<br/> 
+            Gemäss Bundesratsentscheid vom 16.04.20 können Physio-Behandlungen 
+            ab 27.04.20 wieder durchgeführt werden. 
+            Dies unter strenger Einhaltung der Hygienevorschriften.
+            <br/>  
 
 
             Besten Dank für Ihr Verständnis und bleiben Sie gesund!<br/> 
