--- a/team.html
+++ b/team.html
@@ -162,25 +162,6 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Florina&nbsp;Marquez</h1>
-                    <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;HF
-                        <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                        <br/>
-                        <a href="florina-marquez.html" role="button">                        
-                            Mehr&hellip;
-                        </a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/florina.jpg">
-            </div>
-        </div>            
-    </div>
-    <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
                     <h1>Vera&nbsp;Schmidt</h1>
                     <p>
                         Dipl.&nbsp;Physiotherapeutin&nbsp;FH
@@ -193,6 +174,24 @@
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
+            </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <h1>Reto&nbsp;Maurer</h1>
+                    <p>
+                        Sportwissenschaftler&nbsp;EHSM
+                        <br/>
+                        <a href="mailto:reto.maurer@physiomovimento.ch">E-Mail</a>
+                        <br/>                
+                        <a href="reto-maurer.html" role="button">
+                            Mehr&hellip; 
+                        </a>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
             </div>
         </div>       
         <div class="col-sm-6 col-xs-12">
