--- a/team.html
+++ b/team.html
@@ -175,6 +175,7 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
             </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-sm-6 col-xs-12">
@@ -193,6 +194,7 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
             </div>
+        </div>   
         </div>       
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
