--- a/team.html
+++ b/team.html
@@ -193,24 +193,23 @@
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
-            </div>
-        </div>   
+            </div>  
         </div>       
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Reto&nbsp;Maurer</h1>
+                    <h1>Aurelia&nbsp;Altherr</h1>
                     <p>
-                        Sportwissenschaftler&nbsp;EHSM
+                        BSc in Sport, Bewegung&nbsp;und&nbsp;Gesundheit
                         <br/>
-                        <a href="mailto:reto.maurer@physiomovimento.ch">E-Mail</a>
-                        <br/>                
-                        <a href="reto-maurer.html" role="button">
-                            Mehr&hellip; 
-                        </a>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <br/>
+                        <a href="aurelia-altherr.html" role="button">
+                                Mehr&hellip;
+                        </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/aurelia.jpg">
             </div>
         </div>                          
     </div>
@@ -234,24 +233,6 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Aurelia&nbsp;Altherr</h1>
-                    <p>
-                        BSc in Sport, Bewegung&nbsp;und&nbsp;Gesundheit
-                        <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                        <br/>
-                        <a href="aurelia-altherr.html" role="button">
-                                Mehr&hellip;
-                        </a>                        
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/aurelia.jpg">
-            </div>
-    </div> 
-    <div class="row"></div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
                     <h1>Gianni&nbsp;Moretti</h1>
                     <p>Trainer, Sportwissenschaftler&nbsp;i.A.&nbsp;
                         <br/>
@@ -263,6 +244,20 @@
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Lebenslauf_Gianni_Moretti Kopie.jpg">
+            </div>
+    </div> 
+    <div class="row"></div>
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <h1>Igballe&nbsp;Berisha</h1>
+                    <p>
+                        Raumpflegerin
+                        <br/>                                            
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
             </div>
         </div>                  
         <div class="col-sm-6 col-xs-12">
