--- a/team.html
+++ b/team.html
@@ -277,18 +277,6 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Safete&nbsp;Nuredini</h1>
-                    <p>Raumpflegerin
-                        <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
-            </div>                
-        </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
                     <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
                     <p>
                         Raumpflegerin
@@ -297,8 +285,10 @@
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
-            </div>
+            </div>mg class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
+            </div>                
         </div>
+        
     </div>      
 
     <!--
