--- a/team.html
+++ b/team.html
@@ -263,15 +263,14 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Igballe&nbsp;Berisha</h1>
-                    <p>
-                        Raumpflegerin
-                        <br/>                                            
+                    <h1>Safete&nbsp;Nuredini</h1>
+                    <p>Raumpflegerin
+                        <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
-            </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
+            </div>  
     </div> 
     <div class="row"></div>        
         <div class="col-sm-6 col-xs-12">
@@ -284,9 +283,7 @@
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
-            </div>mg class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
-            </div>                
+                <img class="po      
         </div>
         
     </div>      
