--- a/team.html
+++ b/team.html
@@ -283,10 +283,8 @@
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="po      
-        </div>
-        
-        </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">      
+            </div>
     </div>      
 
     <!--
