--- a/index.html
+++ b/index.html
@@ -269,18 +269,18 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Aktueller Stand 16.04.20</h1>
+                <h1>Aktueller Stand 30.04.20</h1>
             </p></a>
             
             Liebe Kundinnen<br/> 
             Liebe Kunden<br/> 
 
             <b>Fitness:</b><br/> 
-            Bleibt bis auf weiteres <b>geschlossen!</b><br/> 
+            Wir informieren Sie hier umgehend, sobald die Richtlinien für die Wiedereröffnung des Fitness klar sind.<br/> 
 
             <b> Physiotherapie:</b><br/> 
-            Gemäss Bundesratsentscheid vom 16.04.20 können Physio-Behandlungen 
-            ab 27.04.20 wieder durchgeführt werden. 
+            Physio-Behandlungen können 
+            wieder durchgeführt werden. 
             Dies unter strenger Einhaltung der Hygienevorschriften.
             <br/>  
 
