--- a/index.html
+++ b/index.html
@@ -269,14 +269,16 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Aktueller Stand 30.04.20</h1>
+                <h1>Aktueller Stand 07.05.20</h1>
             </p></a>
             
             Liebe Kundinnen<br/> 
             Liebe Kunden<br/> 
 
             <b>Fitness:</b><br/> 
-            Wir informieren Sie hier umgehend, sobald die Richtlinien für die Wiedereröffnung des Fitness klar sind.<br/> 
+           Wiedereröffnung ab 11.05.20!<br/> 
+           <p class= "hidden">Weitere Infos  <a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b>hier</b></a></p>
+                </p>
 
             <b> Physiotherapie:</b><br/> 
             Physio-Behandlungen können 
