--- a/index.html
+++ b/index.html
@@ -277,8 +277,10 @@
 
             <b>Fitness:</b><br/> 
            Wiedereröffnung ab 11.05.20!<br/> 
-           <p>Weitere Infos<a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b>hier</b></a></p>
-                </p>
+           <p>Weitere Infos<a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>
+                </p><br/> 
+                Direkter Link zum <a href="https://doodle.com/poll/483yvme6pwvhvf9c" target="_blank"><b> hier</b></a></p>
+            </p><br/> Reservationssystem
 
             <b> Physiotherapie:</b><br/> 
             Physio-Behandlungen können 
