--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
            Wiedereröffnung ab 11.05.20!<br/> 
            <p>Weitere Infos<a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>
                 </p><br/> 
-                Direkter Link zum <a href="https://doodle.com/poll/483yvme6pwvhvf9c" target="_blank"><b> hier</b></a></p>
-            </p><br/> Reservationssystem
+                Direkter Link zum <a href="https://doodle.com/poll/483yvme6pwvhvf9c" target="_blank"><b> Reservationssystem</b></a></p>
+            </p><br/> 
 
             <b> Physiotherapie:</b><br/> 
             Physio-Behandlungen können 
