--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
             <b>Fitness:</b><br/> 
            Wiedereröffnung ab 11.05.20!<br/> 
            <p>Weitere Infos<a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>
-                </p><br/> 
+                </p>
                 Direkter Link zum <a href="https://doodle.com/poll/483yvme6pwvhvf9c" target="_blank"><b> Reservationssystem</b></a></p>
-            </p><br/> 
+            </p> 
 
             <b> Physiotherapie:</b><br/> 
             Physio-Behandlungen können 
@@ -289,7 +289,7 @@
             <br/>  
 
 
-            Besten Dank für Ihr Verständnis und bleiben Sie gesund!<br/> 
+            Besten Dank für Ihre Mitarbeit und bleiben Sie gesund!<br/> 
             Ihr Movimento-Team</p>
            
 
