--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
             <b>Fitness:</b><br/> 
            Wiedereröffnung ab 11.05.20!<br/> 
-           <p>Weitere Infos<a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p> 
+           <p>Weitere Infos<a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a>
                 Direkter Link zum <a href="https://doodle.com/poll/483yvme6pwvhvf9c" target="_blank"><b> Reservationssystem</b></a></p>
          
 
