--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                 <h1>Aktuell</h1>
             </p></a>
             
-            <b>Geschlosseh:</b><br/> 
+            <b>Geschlossen:</b><br/> 
             Auffahrt; Donnerstag den 21.05.20<br/>
             Pfingsten; Montag den 01.06.20<br/> 
-
+            <br/>
             <b>Fitness:</b><br/> 
            Wiedereröffnung seit dem 11.05.20!<br/> 
            <p>Weitere Infos<a href="docs/Schutzkonzept ab 11.05.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a><br/>
