Melina findets schöner

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
             </p></a>
             
             <b>Geschlossen:</b><br/> 
-            Auffahrt; Donnerstag den 21.05.20<br/>
-            Pfingsten; Montag den 01.06.20<br/> 
+             Do., 21.05.20 (Auffahrt)<br/>
+             Mo., 01.06.20 (Pfingsten)<br/> 
             <br/>
             <b>Fitness:</b><br/> 
            Wiedereröffnung seit dem 11.05.20!<br/> 
