--- a/index.html
+++ b/index.html
@@ -271,8 +271,9 @@
             <div class="new well">
                 <h1>Aktuell</h1>
             </p></a>
-            <b> NEU!</b><br/> 
+            <h2> NEU!</h2><br/> 
             <a href="docs/Flyer.pdf" target="_blank"><b> Outdoor Training</b></a><br/>
+            <br/> 
             <b>Fitness:</b><br/> 
            Aktuelles Schutzkonzept ab 29.06.20<br/> 
            <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.06.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a><br/>
