--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
            <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.06.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a><br/>
 
 
-            Bleiben Sie gesund!<br/>
+            <p>Bleiben Sie gesund!</p><br/>
                 
                 
             </div>
