--- a/index.html
+++ b/index.html
@@ -274,12 +274,9 @@
             <a href="docs/Flyer.pdf" target="_blank"><b> Outdoor Training</b></a><br/> 
             <b>Fitness:</b><br/> 
            Aktuelles Schutzkonzept ab 29.06.20<br/> 
-           <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.06.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a><br/>
+           <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.06.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a>
 
-
-            <p>Bleiben Sie gesund!</p>
-                
-                
+            <p>Bleiben Sie gesund!</p>           
             </div>
         </div>
         <div class="col-sm-6 hidden">
