--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <h1>Samstag 1.8. geschlossen</h1>
+                <color: #ec580f>Samstag 1.8. geschlossen</color:> 
                 <b> NEU!</b><br/> 
                 <a href="docs/Flyer.pdf" target="_blank"><b> Outdoor Training</b></a><br/> 
                 <b>Fitness:</b><br/> 
