--- a/Kathrin.html
+++ b/Kathrin.html
@@ -106,12 +106,12 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/aurelia.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/Neue Fotos/Kahrin.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Aurelia&nbsp;Altherr</h2>
-            <p>Sporttherapeutin <br/>
+            <h2>Kathrin&nbsp;Caminada</h2>
+            <p>Sporttherapeutin i.A.<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
@@ -121,16 +121,20 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2018</div>
-        <div class="col-xs-9">Betreuerin Fitness Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+        <div class="col-lg-2 col-xs-3">Seit 2017</div>
+        <div class="col-xs-9">Seit 2020 Betreuerin Fitness Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2018</div>
-        <div class="col-xs-9">Bellicon Trainerin (Trampolin), Universität Basel</div>
+        <div class="col-lg-2 col-xs-3">Seit 2020</div>
+        <div class="col-xs-9">Schwimmlehrerin Schwimmschule Delfin Birsfeldem</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">2016</div>
-        <div class="col-xs-9">Praktikum Spital, Fundacion Aldeas de Paz, Domini. Republik</div>
+        <div class="col-lg-2 col-xs-3">2008-2013</div>
+        <div class="col-xs-9">Abteilung Intensivstation Universitätsspital Zürich</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2007</div>
+        <div class="col-xs-9">Chirurgische Abteilung Stadtspital Triemli Zürich</div>
     </div>
 
     <div class="row section">
@@ -140,7 +144,7 @@
     </div>
     <div class="row">
         <ul>
-            <li>Bachelorstudium Sport, Bewegung und Gesundheit (Prävention und Gesundheitsförderung), Medizinische Fakultät Basel 2019</li>
+            <li>Seit 2019 BSc in Sport, Bewegung und Gesundheit&nbsp;i.A.&nbsp;</li>
         </ul>
     </div>
     <div class="row">
