--- a/index.html
+++ b/index.html
@@ -270,7 +270,6 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <font color="#ec580f"> Samstag 1.August geschlossen </font><br/>
                 <b> NEU!</b><br/> 
                 <a href="docs/Flyer.pdf" target="_blank"><b> Outdoor Training</b></a><br/> 
                 <b>Fitness:</b><br/> 
@@ -282,7 +281,7 @@
         <div class="col-sm-6 hidden">
             <div class="new well">
                 <h1>Mittagsabo: 30% Rabatt</h1>
-                <p>Das neue Mittagsabo berechtigt zum Training Montag-Freitag 11-16 Uhr.</p>
+                <p>Das neuMittagsabo berechtigt zum Training Montag-Freitag 11-16 Uhr.</p>
                 <a class="more" href="fitness.html#preise" role="button">
                     Mehr&hellip;
                 </a>
