--- a/team.html
+++ b/team.html
@@ -120,7 +120,7 @@
                         </a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/barbara.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Barbara.jpg">
             </div>
         </div>
         <div class="col-sm-6 col-xs-12">
@@ -137,7 +137,7 @@
                         </a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/melina.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Melina.jpg">
             </div>
         </div>
     </div>
@@ -156,7 +156,7 @@
                         </a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/ursula.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Ursula.jpg">
             </div>
         </div>
         <div class="col-sm-6 col-xs-12">
@@ -173,7 +173,7 @@
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Vera.jpg">
             </div>
         </div>
     </div>
@@ -192,26 +192,24 @@
                         </a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Reto.jpg">
             </div>  
         </div>       
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Aurelia&nbsp;Altherr</h1>
-                    <p>
-                        BSc in Sport, Bewegung&nbsp;und&nbsp;Gesundheit
+                    <h1>Gianni&nbsp;Moretti</h1>
+                    <p>Trainer, Sportwissenschaftler&nbsp;i.A.&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                        <br/>
-                        <a href="aurelia-altherr.html" role="button">
+                        <br/<>
+                        <a href="gianni-moretti.html" role="button">
                                 Mehr&hellip;
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/aurelia.jpg">
-            </div>
-        </div>                          
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Lebenslauf_Gianni_Moretti Kopie.jpg">
+            </div>                        
     </div>
     <div class="row">           
         <div class="col-sm-6 col-xs-12">
@@ -233,8 +231,8 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Gianni&nbsp;Moretti</h1>
-                    <p>Trainer, Sportwissenschaftler&nbsp;i.A.&nbsp;
+                    <h1>Kathrin&nbsp;Caminada</h1>
+                    <p>Seit 2019 BSc in Sport, Bewegung und Gesundheit&nbsp;i.A.&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
@@ -257,7 +255,7 @@
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/igballe.jpeg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Igballe.jpg">
             </div>
         </div>                  
         <div class="col-sm-6 col-xs-12">
@@ -269,7 +267,7 @@
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/safete.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Safete.jpg">
             </div>  
     </div> 
     <div class="row"></div>        
@@ -283,7 +281,7 @@
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">      
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">      
             </div>
     </div>      
 
