--- a/ursula-hoevelmann.html
+++ b/ursula-hoevelmann.html
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/ursula.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/Neue Fotos/Ursula.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
