--- a/team.html
+++ b/team.html
@@ -236,12 +236,12 @@
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
-                        <a href="gianni-moretti.html" role="button">
+                        <a href="Kathrin.html" role="button">
                                 Mehr&hellip;
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Lebenslauf_Gianni_Moretti Kopie.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Kahrin.jpg">
             </div>
     </div> 
     <div class="row"></div>
