--- a/team.html
+++ b/team.html
@@ -137,7 +137,7 @@
                         </a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Melina.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Melinazugeschnitten.jpg">
             </div>
         </div>
     </div>
