--- a/team.html
+++ b/team.html
@@ -199,7 +199,8 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Gianni&nbsp;Moretti</h1>
-                    <p>Trainer, Sportwissenschaftler&nbsp;i.A.&nbsp;
+                    <p>
+                        Trainer, Sportwissenschaftler&nbsp;i.A.&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
@@ -216,7 +217,8 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Daniel&nbsp;Seiler</h1>
-                    <p>Fitness Betreuer/Trainer&nbsp;safs
+                    <p>
+                        Fitness Betreuer/Trainer&nbsp;safs
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
@@ -232,7 +234,8 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Kathrin&nbsp;Caminada</h1>
-                    <p>Seit 2019 BSc in Sport, Bewegung und Gesundheit&nbsp;i.A.&nbsp;
+                    <p>
+                        Seit 2019 BSc in Sport, Bewegung und Gesundheit&nbsp;i.A.&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
@@ -262,7 +265,8 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Safete&nbsp;Nuredini</h1>
-                    <p>Raumpflegerin
+                    <p>
+                        Raumpflegerin
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
